# test_cases

./: .gitignore  README.md  branchesdiff.cli.py  branchesdiff.py  config.ini  pyproject.toml  settings.py  work_log.md  worker.py
branchesdiff/: __init__.py  branchesdiff.py
branchesdiff/repository/: API_connector.py  __init__.py
examples/: p10_small.json  res_small.json  sisyphus_small.json
repository/: API_connector.py  __init__.py  package.py
